Refactor types to be internal files