@@ -1,19 +1,19 @@
 package io.github.brenbar.japi;
 
-import java.util.Collections;
 import java.util.List;
 
-public class UString implements UType {
+class _UBoolean implements _UType {
+
     @Override
     public int getTypeParameterCount() {
         return 0;
     }
 
     @Override
-    public List<ValidationFailure> validate(Object value, List<UTypeDeclaration> typeParameters,
-            List<UTypeDeclaration> generics) {
-        if (value instanceof String) {
-            return Collections.emptyList();
+    public List<ValidationFailure> validate(Object value, List<_UTypeDeclaration> typeParameters,
+            List<_UTypeDeclaration> generics) {
+        if (value instanceof Boolean) {
+            return List.of();
         } else {
             return _ValidateUtil.getTypeUnexpectedValidationFailure(List.of(), value,
                     this.getName(generics));
@@ -22,18 +22,19 @@ public class UString implements UType {
 
     @Override
     public Object generateRandomValue(Object startingValue, boolean useStartingValue,
-            boolean includeRandomOptionalFields, List<UTypeDeclaration> typeParameters,
-            List<UTypeDeclaration> generics,
+            boolean includeRandomOptionalFields, List<_UTypeDeclaration> typeParameters,
+            List<_UTypeDeclaration> generics,
             RandomGenerator random) {
         if (useStartingValue) {
             return startingValue;
         } else {
-            return random.nextString();
+            return random.nextBoolean();
         }
     }
 
     @Override
-    public String getName(List<UTypeDeclaration> generics) {
-        return "String";
+    public String getName(List<_UTypeDeclaration> generics) {
+        return "Boolean";
     }
+
 }
