@@ -1,19 +1,19 @@
 package io.github.brenbar.japi;
 
+import java.util.Collections;
 import java.util.List;
 
-class UBoolean implements UType {
-
+public class _UString implements _UType {
     @Override
     public int getTypeParameterCount() {
         return 0;
     }
 
     @Override
-    public List<ValidationFailure> validate(Object value, List<UTypeDeclaration> typeParameters,
-            List<UTypeDeclaration> generics) {
-        if (value instanceof Boolean) {
-            return List.of();
+    public List<ValidationFailure> validate(Object value, List<_UTypeDeclaration> typeParameters,
+            List<_UTypeDeclaration> generics) {
+        if (value instanceof String) {
+            return Collections.emptyList();
         } else {
             return _ValidateUtil.getTypeUnexpectedValidationFailure(List.of(), value,
                     this.getName(generics));
@@ -22,19 +22,18 @@ class UBoolean implements UType {
 
     @Override
     public Object generateRandomValue(Object startingValue, boolean useStartingValue,
-            boolean includeRandomOptionalFields, List<UTypeDeclaration> typeParameters,
-            List<UTypeDeclaration> generics,
+            boolean includeRandomOptionalFields, List<_UTypeDeclaration> typeParameters,
+            List<_UTypeDeclaration> generics,
             RandomGenerator random) {
         if (useStartingValue) {
             return startingValue;
         } else {
-            return random.nextBoolean();
+            return random.nextString();
         }
     }
 
     @Override
-    public String getName(List<UTypeDeclaration> generics) {
-        return "Boolean";
+    public String getName(List<_UTypeDeclaration> generics) {
+        return "String";
     }
-
 }
